Added Mage and CameraFollow scripts

--- a/Omega-Mage.csproj
+++ b/Omega-Mage.csproj
@@ -225,7 +225,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\__Scripts\CameraFollow.cs" />
     <Compile Include="Assets\__Scripts\LayoutTiles.cs" />
+    <Compile Include="Assets\__Scripts\Mage.cs" />
     <Compile Include="Assets\__Scripts\ProtoTools\PT_FloatingScore.cs" />
     <Compile Include="Assets\__Scripts\ProtoTools\PT_MonoBehaviour.cs" />
     <Compile Include="Assets\__Scripts\ProtoTools\PT_Mover.cs" />
