Added TapIndicator script and Drag Movement

--- a/Omega-Mage.csproj
+++ b/Omega-Mage.csproj
@@ -234,6 +234,7 @@
     <Compile Include="Assets\__Scripts\ProtoTools\PT_Scoreboard.cs" />
     <Compile Include="Assets\__Scripts\ProtoTools\PT_XMLReader.cs" />
     <Compile Include="Assets\__Scripts\ProtoTools\Utils.cs" />
+    <Compile Include="Assets\__Scripts\TapIndicator.cs" />
     <Compile Include="Assets\__Scripts\Tile.cs" />
   </ItemGroup>
   <ItemGroup>
