Added Inventory and Selecting Elements

--- a/Omega-Mage.csproj
+++ b/Omega-Mage.csproj
@@ -226,6 +226,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\__Scripts\CameraFollow.cs" />
+    <Compile Include="Assets\__Scripts\ElementInventoryButton.cs" />
     <Compile Include="Assets\__Scripts\LayoutTiles.cs" />
     <Compile Include="Assets\__Scripts\Mage.cs" />
     <Compile Include="Assets\__Scripts\ProtoTools\PT_FloatingScore.cs" />
