Added Portal script for room changing

--- a/Omega-Mage.csproj
+++ b/Omega-Mage.csproj
@@ -231,6 +231,7 @@
     <Compile Include="Assets\__Scripts\FireGroundSpell.cs" />
     <Compile Include="Assets\__Scripts\LayoutTiles.cs" />
     <Compile Include="Assets\__Scripts\Mage.cs" />
+    <Compile Include="Assets\__Scripts\Portal.cs" />
     <Compile Include="Assets\__Scripts\ProtoTools\PT_FloatingScore.cs" />
     <Compile Include="Assets\__Scripts\ProtoTools\PT_MonoBehaviour.cs" />
     <Compile Include="Assets\__Scripts\ProtoTools\PT_Mover.cs" />
