Added EnemySpiker script and trigger damage component to Mage script

--- a/Omega-Mage.csproj
+++ b/Omega-Mage.csproj
@@ -229,6 +229,7 @@
     <Compile Include="Assets\__Scripts\Element.cs" />
     <Compile Include="Assets\__Scripts\ElementInventoryButton.cs" />
     <Compile Include="Assets\__Scripts\EnemyBug.cs" />
+    <Compile Include="Assets\__Scripts\EnemySpiker.cs" />
     <Compile Include="Assets\__Scripts\FireGroundSpell.cs" />
     <Compile Include="Assets\__Scripts\LayoutTiles.cs" />
     <Compile Include="Assets\__Scripts\Mage.cs" />
