--- a/Omega-Mage.csproj
+++ b/Omega-Mage.csproj
@@ -228,6 +228,7 @@
     <Compile Include="Assets\__Scripts\CameraFollow.cs" />
     <Compile Include="Assets\__Scripts\Element.cs" />
     <Compile Include="Assets\__Scripts\ElementInventoryButton.cs" />
+    <Compile Include="Assets\__Scripts\Enemy.cs" />
     <Compile Include="Assets\__Scripts\EnemyBug.cs" />
     <Compile Include="Assets\__Scripts\EnemySpiker.cs" />
     <Compile Include="Assets\__Scripts\FireGroundSpell.cs" />
